--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.demo</groupId>
   <artifactId>MSTestRepo3</artifactId>
   <packaging>war</packaging>
-  <version>1.7-SNAPSHOT</version>
+  <version>1.7-V1.0SP0</version>
   <name>MSTestRepo3 Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
